--- a/css/cards.css
+++ b/css/cards.css
@@ -1042,7 +1042,7 @@ a:hover .lnk-icon-right {
 
 .fh5co-project-style-2 {
   padding-bottom: 0;
-  background-color: #e09952;
+  background-color: #D9BB26;
 }
 .fh5co-project-style-2 .fh5co-projects ul {
   padding: 0;
