--- a/css/cards.css
+++ b/css/cards.css
@@ -29,7 +29,7 @@ body {
   font-family: "Open Sans", Arial, sans-serif;
   font-size: 16px;
   line-height: 26px;
-  color: gray;
+  color: #3D3D3D;
   font-weight: 400;
 }
 @media screen and (max-width: 480px) {
