--- a/css/cards.css
+++ b/css/cards.css
@@ -3205,11 +3205,10 @@ a:hover .lnk-icon-right {
 @media screen and (min-width: 992px) {
   .fh5co-pricing-style-2 .pricing-item {
     margin: 1.5em 0;
-    padding: 5px;
   }
   .fh5co-pricing-style-2 .pricing-item.pricing-item--featured {
     z-index: 10;
-    padding: 5px;
+    margin: .5em 0;
     font-size: 1.15em;
   }
 }
@@ -3488,8 +3487,8 @@ a:hover .lnk-icon-right {
   top: auto;
   bottom: 0;
   padding: 1em;
-  height: 4.75em;
-  background: #79FAC4;
+  height: 4em;
+  background: #b7cc80;
   color: #3c4a50;
   -webkit-transition: -webkit-transform 0.35s;
   transition: transform 0.35s;
