--- a/css/cards.css
+++ b/css/cards.css
@@ -2229,11 +2229,11 @@ a:hover .lnk-icon-right {
   background: #fff;
   position: relative;
   margin-bottom: 30px;
-  -webkit-box-shadow: 0px 0px 20px #DFDFDF;
-  -moz-box-shadow: 0px 0px 20px #DFDFDF;
-  -ms-box-shadow: 0px 0px 20px #DFDFDF;
-  -o-box-shadow: 0px 0px 20px #DFDFDF;
-  box-shadow: 0px 0px 20px #DFDFDF;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  -ms-box-shadow: none;
+  -o-box-shadow: none;
+  box-shadow: none;
   -webkit-border-radius: 7px;
   -moz-border-radius: 7px;
   -ms-border-radius: 7px;
